# app/Swagger/V1/DocCityControllerSwagger.php
@@ -6,7 +6,7 @@ namespace App\Swagger\V1;
  *
  * @OA\Get(
  *     path="/list-cities",
- *     tags={"Cities"},
+ *     tags={"GEOAPI"},
  *     @OA\Parameter(
  *         name="iso3",
  *         in="query",
@@ -28,7 +28,23 @@ namespace App\Swagger\V1;
  *         description="province name code",
  *         @OA\Schema(type="string")
  *     ),
- *     @OA\Response(response=200, description="return Constant Data", @OA\JsonContent())
+ *     @OA\Response(
+ *         response=200,
+ *         description="Successful response",
+ *         @OA\JsonContent(
+ *             type="object",
+ *             @OA\Property(property="status", type="string", example="success"),
+ *             @OA\Property(
+ *                 property="data",
+ *                 type="array",
+ *                 @OA\Items(
+ *                     type="object",
+ *                     @OA\Property(property="id", type="integer", example=48374),
+ *                     @OA\Property(property="name", type="string", example="Banda Aceh")
+ *                 )
+ *             )
+ *         )
+ *     )
  * )
  */
 
